@@ -37,6 +37,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Support git:// and mms:// protocols by default for external links
 * (bug 15810) Blocked admins can no longer unblock themselves without the
   'unblockself' permission (which they have by default)
+* (bug 18499) Added "enhanced" URL parameter to switch between old and enhanced
+  changes list
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive without
